--- a/globomatics-ui/package.json
+++ b/globomatics-ui/package.json
@@ -24,7 +24,7 @@
     "cors": "^2.8.5",
     "express-http-proxy": "^1.6.3",
     "port": "^0.8.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
